<resources>
    <string name="app_name">XOverAuction</string>

    // Button text
    <string name="login">Login</string>

    // Website text
    <string name="url">http://www.xover.com/</string>

    // Title texts
    <string name="activity_title_user_list">Users List</string>
    <string name="activity_title_user_details">User Details</string>

    // Button texts
    <string name="btn_text_load_data">Load Data</string>
    <string name="btn_text_retry">Retry</string>

    // View texts
    <string name="view_text_email">Email:</string>
    <string name="view_text_followers">Followers:</string>
    <string name="view_text_description">Description:</string>

    <string name="string_content_description">Non accessible view</string>

    // Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
    <string name="activity_dashboard">Dashboard</string>
    <string name="activity_login">Login</string>

    // Register User texts
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="username_hint">Tom</string>
    <string name="email_hint">tom@xyz.com</string>
    <string name="password_hint">QW3fx_tYitZ</string>
    <string name="bt_register">Register</string>
    <string name="tv_register">Register</string>

    // Login User texts
    <string name="tv_login">Login</string>
    <string name="bt_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="view_text_status">Status:</string>
</resources>
